# -

./: README.md  README_cn.md
data_collect/: IMU1 50 _sentence.py  IMU1 50 _vocabulary.py  IMU_CSV_Viewer.py
portable_inference/: README.md  __init__.py  __main__.py  environment.yml  pyproject.toml  requirements.txt
portable_inference/model/: dataset_meta.json  normalization.json
portable_inference/src/imu_inference/: __init__.py  __main__.py  model.py  predict.py  realtime.py  receiver.py
train/: train.py
