[project]
name = "sign-lang-inference"
version = "1.0.0"
description = "实时手语识别推理系统（双 IMU 手套）"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "PySide6>=6.5.0",
    "pyqtgraph>=0.13.7",
]

[project.scripts]
imu-inference = "imu_inference.realtime:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
